# VSENSE_TANGO_AR

./: .gitignore  CMakeLists.txt  README.md  build.gradle  cleanProject.bat  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JNIInterface.cpp  PointCloudApp.cpp  PointCloudApp.h
app/src/main/java/vsense/ar/: AppCompatPreferenceActivity.java  DecimalNumberPickerPreference.java  GLSurfaceRenderer.java  MainActivity.java  NumberPickerPreference.java  SettingsActivity.java  TangoInitializationHelper.java  TangoJNINative.java  package-info.java
app/src/main/jniLibs/include/tango-gl/: texture.h
app/src/main/res/layout/: activity_pointcloud.xml
app/src/main/res/values/: array.xml  strings.xml  styles.xml
app/src/main/res/xml/: pref_color_correction.xml  pref_depth_map.xml  pref_headers.xml  pref_render.xml
assets/shaders/: colorImage.comp.in  depthMapFillHoles.comp.in  depthMapInit.comp.in  depthMapMarkReliable.comp.in  envMapSHCoefficients.comp.in  envMapSimulate.comp.in  environmentMapCorrect.comp.in  environmentMapError.comp.in  environmentMapOverlay.frag.in  environmentMapOverlay.vert.in  environmentMapProject.comp.in  environmentMapRelocate.comp.in  environmentMapSample.comp.in  gizmo.frag.in  gizmo.vert.in  mesh.frag.in  mesh.vert.in  pointCloud.frag.in  pointCloud.vert.in  shmeshDot.frag.in  shmeshDot.vert.in  shmeshPlaneDot.frag.in  shmeshPlaneDot.vert.in  videoOverlay.frag.in  videoOverlay.vert.in  videoOverlayTexture.frag.in
cmake/: FindTango.cmake  SetVariables.cmake  project.vcxproj.user.in
gradle/wrapper/: gradle-wrapper.properties
matlab/: accumulateErrors.m  analyzeSamples.m  binarizeImg.m  createDepthMap.m  frustum.m  getKnownDepth.m  linRGB2sRGB.m  pose2mat.m  project.m  projectionMatrix.m  quat2mat.m  readColorImage.m  readImageMetadata.m  readMaps.m  readPointCloud.m  readPointCloudMetadata.m  readSamples.m  rgb2hsv.m  runmeCorrection.m  runmeToRegenerateMapFiles.m  sRGB2lRGB.m  undistort.m
vsense-libs/: CMakeLists.txt  build.gradle
vsense-libs/include/vsense/color/: Color.h
vsense-libs/include/vsense/common/: Status.h  Util.h
vsense-libs/include/vsense/depth/: DepthMap.h
vsense-libs/include/vsense/em/: EnvironmentMap.h  Process.h
vsense-libs/include/vsense/gl/: Camera.h  Color.h  DrawableObject.h  EnvironmentMapOverlay.h  GLViewer.h  GizmoObject.h  ImageObject.h  MeshObject.h  PointCloudObject.h  SHMeshDotObject.h  SHMeshPlaneDotObject.h  StaticMesh.h  Texture.h  Transform.h  Util.h  VideoOverlay.h
vsense-libs/include/vsense/io/: Image.h  ImageReader.h  ObjReader.h  PointCloudReader.h
vsense-libs/include/vsense/pc/: PointCloud.h
vsense-libs/include/vsense/sh/: SphericalHarmonics.h
vsense-libs/src/: CMakeLists.txt
vsense-libs/src/main/: CMakeLists.txt
vsense-libs/src/main/cpp/: CMakeLists.txt
vsense-libs/src/main/cpp/vsense_color/: CMakeLists.txt
vsense-libs/src/main/cpp/vsense_color/vsense/color/: Color.cpp
vsense-libs/src/main/cpp/vsense_depth/: CMakeLists.txt
vsense-libs/src/main/cpp/vsense_depth/vsense/depth/: DepthMap.cpp
vsense-libs/src/main/cpp/vsense_em/: CMakeLists.txt  vsense_em.qrc
vsense-libs/src/main/cpp/vsense_em/vsense/em/: EnvironmentMap.cpp  Process.cpp
vsense-libs/src/main/cpp/vsense_gl/: CMakeLists.txt  vsense_gl.qrc
vsense-libs/src/main/cpp/vsense_gl/vsense/gl/: Camera.cpp  DrawableObject.cpp  EnvironmentMapOverlay.cpp  GLViewer.cpp  GizmoObject.cpp  ImageObject.cpp  MeshObject.cpp  PointCloudObject.cpp  SHMeshDotObject.cpp  SHMeshPlaneDotObject.cpp  StaticMesh.cpp  Texture.cpp  Transform.cpp  Util.cpp  VideoOverlay.cpp
vsense-libs/src/main/cpp/vsense_gl_test/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Viewer.cpp  Viewer.h
vsense-libs/src/main/cpp/vsense_io/: CMakeLists.txt
vsense-libs/src/main/cpp/vsense_io/vsense/io/: Image.cpp  ImageReader.cpp  ObjReader.cpp  PointCloudReader.cpp
vsense-libs/src/main/cpp/vsense_pc/: CMakeLists.txt
vsense-libs/src/main/cpp/vsense_pc/vsense/pc/: PointCloud.cpp
vsense-libs/src/main/cpp/vsense_sh/: CMakeLists.txt
vsense-libs/src/main/cpp/vsense_sh/vsense/sh/: SphericalHarmonics.cpp
vsense-libs/src/main/cpp/vsense_sh_mesh_app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MeshSHProcess.cpp  MeshSHProcess.h  main.cpp
vsense-libs/src/main/cpp/vsense_sh_test/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
vsense-libs/src/main/cpp/vsense_shader_test/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Viewer.cpp  Viewer.h  main.cpp
