CMAKE_MINIMUM_REQUIRED(VERSION 3.4.1)

SET(CMAKE_VERBOSE_MAKEFILE on)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake;${CMAKE_MODULE_PATH}")
INCLUDE(SetVariables)

IF(ANDROID)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
ENDIF()

SET(dist_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../../../dist)

SET(VSENSE_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../../include/)
INCLUDE_DIRECTORIES(${VSENSE_INCLUDE_DIR})

INCLUDE_DIRECTORIES(${glm_INCLUDE_DIR})

ADD_SUBDIRECTORY(vsense_color)
ADD_SUBDIRECTORY(vsense_depth)
ADD_SUBDIRECTORY(vsense_em)
ADD_SUBDIRECTORY(vsense_io)
ADD_SUBDIRECTORY(vsense_gl)
ADD_SUBDIRECTORY(vsense_pc)
ADD_SUBDIRECTORY(vsense_sh)

IF(MSVC)
	ADD_SUBDIRECTORY(vsense_gl_test)
	ADD_SUBDIRECTORY(vsense_sh_test)
	ADD_SUBDIRECTORY(vsense_shader_test)
	ADD_SUBDIRECTORY(vsense_sh_mesh_app)
ENDIF()
