PROJECT(vsense_em)

IF(MSVC)
	SET(CMAKE_AUTORCC ON)

	FIND_PACKAGE(Qt5Widgets REQUIRED)
	SET(BIN_FOLDERS "${_qt5Widgets_install_prefix}/bin;${BIN_FOLDERS}")

	SET(VERSION_GLSL "430")
	SET(PRECISION "precision mediump float;")
	FILE(GLOB SHADER_FILES ${VSENSE_INCLUDE_DIR}/../../assets/shaders/*.in)
	FOREACH(SHADER_FILE ${SHADER_FILES})
		GET_FILENAME_COMPONENT(OUTPUT_FILE ${SHADER_FILE} NAME)	
		STRING(REGEX REPLACE "\\.in" "" OUTPUT_FILE ${OUTPUT_FILE})
		CONFIGURE_FILE(${SHADER_FILE} "${CMAKE_CURRENT_SOURCE_DIR}/resources/shaders/${OUTPUT_FILE}")
	ENDFOREACH()	

	SET(RCC_FILES vsense_em.qrc)

	FILE(GLOB INC_FILES ${VSENSE_INCLUDE_DIR}/vsense/em/*.h)    
ELSEIF(ANDROID)
	FIND_PACKAGE(Tango REQUIRED)
    
    INCLUDE_DIRECTORIES(${Tango_INCLUDE_DIRS})
ENDIF()

FILE(GLOB SRC_FILES vsense/em/*.cpp)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${SRC_FILES} ${INC_FILES} ${RCC_FILES})

IF(MSVC)
	qt5_use_modules(${PROJECT_NAME} Core OpenGL Widgets)
ELSEIF(ANDROID)
	SET_TARGET_PROPERTIES(${PROJECT_NAME}
                      PROPERTIES
                      ARCHIVE_OUTPUT_DIRECTORY
                      "${VSENSE_INCLUDE_DIR}/../lib/em/${ANDROID_ABI}")
ENDIF()