PROJECT(vsense_io)

IF(MSVC)
	FILE(GLOB INC_FILES ${VSENSE_INCLUDE_DIR}/vsense/io/*.h)    
ELSEIF(ANDROID)
    FIND_PACKAGE(Tango REQUIRED)

    INCLUDE_DIRECTORIES(${Tango_INCLUDE_DIRS})
ENDIF()

FILE(GLOB SRC_FILES vsense/io/*.cpp)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${SRC_FILES} ${INC_FILES})

IF(ANDROID)
	SET_TARGET_PROPERTIES(${PROJECT_NAME}
                      PROPERTIES
                      ARCHIVE_OUTPUT_DIRECTORY
                      "${VSENSE_INCLUDE_DIR}/../lib/io/${ANDROID_ABI}")
ENDIF()